deploy/environments/development/web-admin/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-admin
spec:
  template:
    spec:
      containers:
      - name: web-admin
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
