deploy/environments/development/web-admin/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-admin
  labels:
    app: web-admin
spec:
  tls:
    - hosts:
        - dev-web-admin.everbloom.com
      secretName: web-admin-dev-tls
  rules:
    - host: dev-web-admin.everbloom.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-admin
                port:
                  number: 80
